# stringbench

./: CMakeLists.txt  Makefile  README.md  cmakung
results/: stringbench-aarch64-alpine-musl-gcc11-static.txt  stringbench-aarch64-comparison.txt  stringbench-aarch64-ubuntu-glibc-clang15-dynamic.txt  stringbench-comparison.txt  stringbench-musl-gcc11-static.txt  stringbench-musl-gcc12-static.txt  stringbench-musl-perf-clang16-static.txt  stringbench-ubuntu-glibc-clang15-dynamic.txt  stringbench-ubuntu-glibc-clang15-static.txt  stringbench-xeo-comparison.txt  stringbench-xeo-musl-gcc11-static.txt  stringbench-xeo-musl-perf-clang16-static.txt  stringbench-xeo-ubuntu-glibc-clang15-static.txt
src/: stringbench.cpp
